[project]
name = "allystack"
version = "0.1.0"
description = "Assigntment @yourallystack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.39.0",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[project.scripts]
allystack-live = "realtime_interview_agent.live_voice:main"
